# Communication-test

./: README.md
local/: local.pro  main.cpp  tcpclient.cpp  widget.ui  说明文档.txt
remote/: main.cpp  remote.pro  tcpclient.cpp  tcpserver.cpp  tcpserver.h
ros_qt/: CMakeLists.txt  package.xml  说明文档.txt
ros_qt/src/: main.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  token.h
